--- a/app/src/main/res/layout/fragment_message_board.xml
+++ b/app/src/main/res/layout/fragment_message_board.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:clipToPadding="false"
             android:divider="@android:color/transparent"
-            android:dividerHeight="16dp"
+            android:dividerHeight="5dp"
             android:listSelector="@android:color/transparent"
             android:padding="8dp"
             android:scrollbarStyle="outsideOverlay"
@@ -31,8 +31,8 @@
         android:layout_marginRight="32dp"
         android:layout_marginBottom="32dp"
         android:src="@drawable/button_add"
-        fab:fab_colorNormal="@color/test"
-        fab:fab_colorPressed="@color/test"/>
+        fab:fab_colorNormal="@color/attention"
+        fab:fab_colorPressed="#056f00"/>
 
 </FrameLayout>
 
