--- a/app/src/main/res/values-v21/themes.xml
+++ b/app/src/main/res/values-v21/themes.xml
@@ -6,5 +6,7 @@
         <item name="colorPrimaryDark">@color/test_primary</item>
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
+        <item name="android:navigationBarColor">@color/test_primary</item>
+        <item name="android:alertDialogTheme">@style/Dialog</item>
     </style>
 </resources>
