--- a/app/src/main/res/layout/fragment_message_board.xml
+++ b/app/src/main/res/layout/fragment_message_board.xml
@@ -30,7 +30,7 @@
         android:layout_gravity="bottom|right"
         android:layout_marginRight="32dp"
         android:layout_marginBottom="32dp"
-        android:src="@drawable/button_add"
+        android:src="@drawable/ic_add_white_48dp"
         fab:fab_colorNormal="@color/attention"
         fab:fab_colorPressed="#056f00"/>
 
