--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -2,8 +2,31 @@
 <resources>
     <style name="AppTheme" parent="android:Theme.Material.Light">
     </style>
+
     <style name="Dialog" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:width">150dp</item>
         <item name="android:background">#ffffff</item>
     </style>
+
+    <style name="DialogTitle" >
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/black_translucent</item>
+    </style>
+
+    <style name="DialogBody" >
+        <item name="android:layout_marginTop">12sp</item>
+        <item name="android:layout_marginBottom">24sp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/abc_primary_text_material_light</item>
+    </style>
+
+    <style name="EditText" parent="Widget.AppCompat.EditText">
+        <item name="android:layout_marginTop">12sp</item>
+        <item name="android:layout_marginBottom">24sp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/highlighted_text_material_light</item>
+        <item name="android:textColorHint">@color/hint_foreground_material_light</item>
+        <item name="android:theme">@style/Theme.AppCompat.Light</item>
+    </style>
+
 </resources>
