--- a/app/src/main/res/layout/dialog_password.xml
+++ b/app/src/main/res/layout/dialog_password.xml
@@ -6,10 +6,9 @@
     android:background="#fff">
 
     <EditText
-        android:id="@+id/set_todo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:textColor="#000"/>
+        android:singleLine="true"/>
 
 </LinearLayout>
