--- a/app/src/main/res/layout/view_todo.xml
+++ b/app/src/main/res/layout/view_todo.xml
@@ -9,12 +9,12 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/todo_layout"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="57dp">
         <!-- Bottom View Start-->
         <LinearLayout
             android:background="#66ddff00"
             android:id="@+id/bottom_wrapper"
-            android:layout_width="160dp"
+            android:layout_width="140dp"
             android:weightSum="1"
             android:layout_height="match_parent"
             android:gravity="center"
@@ -22,32 +22,32 @@
             <!--What you want to show-->
             <Button
                 android:id="@+id/todo_complete_button"
-                android:layout_width="80dp"
+                android:layout_width="70dp"
                 android:layout_height="match_parent"
-                android:background="#00FF00"
+                android:background="#9575cd"
                 android:text="YES"/>
             <Button
                 android:id="@+id/todo_del_button"
-                android:layout_width="80dp"
+                android:layout_width="70dp"
                 android:layout_height="match_parent"
-                android:background="#FF3030"
+                android:background="#e00032"
                 android:text="DEL" />
         </LinearLayout>
         <!-- Bottom View End-->
 
         <!-- Surface View Start -->
         <LinearLayout
-            android:padding="8dp"
             android:background="#ffffff"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center"
+            android:padding="16dp"
             android:orientation="horizontal">
             <!--What you want to show in SurfaceView-->
             <Button
                 android:id="@+id/finish_flag"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
-                android:layout_gravity="center_vertical"
                 android:background="#000"
                 android:layout_margin="10dp"/>
 
@@ -56,10 +56,12 @@
                 android:tag="Hover"
                 android:textColor="#666666"
                 android:text="只是试试"
-                android:textSize="25sp"
-                android:gravity="center_vertical"
+                android:textSize="19sp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="8dp"
+                android:singleLine="true"/>
         </LinearLayout>
         <!-- Surface View End -->
     </com.daimajia.swipe.SwipeLayout>
