--- a/app/src/main/res/layout/dialog_password.xml
+++ b/app/src/main/res/layout/dialog_password.xml
@@ -9,6 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:singleLine="true"/>
+        android:singleLine="true"
+        android:password="true"
+        android:textColor="@color/primary_text_default_material_light"/>
 
 </LinearLayout>
