--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -24,7 +24,8 @@
         <item name="android:layout_marginTop">12sp</item>
         <item name="android:layout_marginBottom">24sp</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:theme">@style/Theme.AppCompat.Light</item>
+        <item name="android:textColor">@color/primary_text_default_material_light</item>
+        <item name="android:background">@drawable/abc_edit_text_material</item>
     </style>
 
 </resources>
