--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,8 +6,15 @@
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowBackground">@color/background</item>
-        <item name="android:alertDialogTheme">@style/Theme.AppCompat.Light.Dialog</item>
+        <item name="android:alertDialogTheme">@style/Dialog</item>
     </style>
 
+    <style name="MyTheme.Material.Light" parent="Theme.AppCompat">
+        <item name="colorPrimary">@color/test</item>
+        <item name="colorPrimaryDark">@color/test_primary</item>
+        <item name="windowActionBar">true</item>
+        <item name="android:navigationBarColor">@color/test_primary</item>
+        <item name="android:alertDialogTheme">@style/Dialog</item>
+    </style>
 
 </resources>
